Fixed footer overflow on mobile devices

--- a/pages/index.scss
+++ b/pages/index.scss
@@ -279,7 +279,7 @@ section:nth-of-type(3) article
 	&:first-of-type
 	{
 		// Conteneur des options de tri.
-		margin-bottom: 3rem;
+		margin: 0 1rem 3rem 1rem;
 	}
 
 	div
